--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "expo": "^38.0.8",
+    "flow": "^0.2.3",
     "react": "^16.13.1",
     "react-native": "0.62.2",
     "watchman": "^1.0.0"
