--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "native": "^0.3.3",
     "react": "^16.14.0",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "react-native": "^0.64.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-modal-selector": "^2.0.3",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12"
+    "react-native-unimodules": "^0.13.3",
+    "react-native-web": "^0.16.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
