--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "expo": "^40.0.0",
+    "expo": "^40.0.1",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
     "native": "^0.3.3",
     "react": "^16.14.0",
     "react-dom": "16.13.1",
-    "react-native": "^0.64.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-modal-selector": "^2.0.3",
     "react-native-reanimated": "~1.13.0",
